2008-06-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/rtmon.t: Change to using new types.

2008-06-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu_supplement/.cvsignore, cpu_supplement/Makefile.am,
	cpu_supplement/arm.t, cpu_supplement/bfin.t,
	cpu_supplement/cpu_supplement.texi, cpu_supplement/i386.t,
	cpu_supplement/m68k.t, cpu_supplement/mips.t,
	cpu_supplement/powerpc.t, cpu_supplement/preface.texi,
	cpu_supplement/sh.t: Remove duplicated text from each CPU specific
	chapter. This text was necessary when each CPU was a separate manual
	but now only needs to be one place and that is in an introductory
	chapter.
	* cpu_supplement/general.t: New file.

2008-06-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/bsp.t, user/init.t: Rework initialization and BSP chapters to
	account for changes to initialization framework.

2008-05-22	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/conf.t: Add baseline interface for Watchdog Driver.

2008-05-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/conf.t: Fix text on CONFIGURE_APPLICATION_NEEDS_CLOCK_DRIVER.

2008-05-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/conf.t: Fix typo on
	CONFIGURE_APPLICATION_DOES_NOT_NEED_CLOCK_DRIVER.

2008-04-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/conf.t: Add CONFIGURE_APPLICATION_DOES_NOT_NEED_CLOCK_DRIVER.

2008-04-16	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/bsp.t, user/conf.t, user/init.t, user/intr.t, user/overview.t,
	user/timer.t: Correct default values. Make it clear that confdefs.h
	calculates the memory required for you.

2008-03-29	Chris Johns <chrisj@rtems.org>

	* networking/testing.t: Cleaned up the patch from Ian.

2008-03-29	Chris Johns <chrisj@rtems.org>

	* networking/testing.t: Patch from Ian Caddy to document the
	routes debug information.

2008-03-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/clock.t: Refactored rtems_clock_get into 5 methods which
	are single purpose and more strongly typed.  They are: